add custom color palette

--- a/RealTimeForum/src/styles.scss
+++ b/RealTimeForum/src/styles.scss
@@ -2,3 +2,12 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+$primary-color: #4CAF50;  
+$primary-dark-color: #388E3C;  
+$primary-light-color: #C8E6C9;  
+$accent-color: #8BC34A;  
+$accent-dark-color: #689F38; 
+$background-color: #F1F8E9; 
+$error-color: #E57373; 
