--- a/RealTimeForum/src/app/components/login/login.component.html
+++ b/RealTimeForum/src/app/components/login/login.component.html
@@ -22,7 +22,8 @@
                 @if (loginForm.get('username')?.hasError('minlength')){
                 <mat-error>Password must be at least 6 characters long.</mat-error>
                 }
-            </mat-form-field>         
+            </mat-form-field> 
+
             <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid || isLoading">
                 @if (isLoading){
                 <mat-spinner diameter="20"></mat-spinner>
@@ -32,5 +33,10 @@
                 }
             </button>
         </form>
+
+        <p>
+            Don't have an account? 
+            <a href="register">Create Account</a> 
+        </p>
     </mat-card>
 </div>
