--- a/RealTimeForum/src/app/components/login/login.component.scss
+++ b/RealTimeForum/src/app/components/login/login.component.scss
@@ -1,27 +1,65 @@
+
+@import '../../../styles.scss';
+
 .login-container {
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 100vh; 
     padding: 2rem;
-  
+    background-color: $background-color; 
+    
     mat-card {
       padding: 2rem;
       max-width: 400px;
-      width: 100%;
+      width: 100%;    
+      border-radius: 15px; 
   
       h2 {
         text-align: center;
-        margin-bottom: 1.5rem;
+        margin-bottom: 1.5rem;      
+        color: $primary-dark-color; 
       }
   
       .full-width {
         width: 100%;
         margin-bottom: 1.5rem;
+  
+        mat-form-field {
+          width: 100%;
+  
+          input {
+            padding: 12px; 
+            border-radius: 8px; 
+            background-color: $primary-light-color; 
+          }  
+        }
       }
   
       button {
         width: 100%;
-        padding: 0.75rem;
+        padding: 12px; 
         font-size: 1rem;
+        border-radius: 25px; 
+        background-color: $primary-color; 
+        color: white;
+        transition: background-color 0.3s ease;
+        &:hover {
+          background-color: $primary-dark-color; 
+        }
+      }
+  
+      a {
+        color: $primary-dark-color;
+        text-decoration: none;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+  
+      p {
+        text-align: center;
+        margin-top: 1rem;
       }
     }
   }
