change body background

--- a/RealTimeForum/src/styles.scss
+++ b/RealTimeForum/src/styles.scss
@@ -1,9 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
-
 $primary-color: #4CAF50;  
 $primary-dark-color: #388E3C;  
 $primary-light-color: #C8E6C9;  
@@ -11,3 +6,6 @@ $accent-color: #8BC34A;
 $accent-dark-color: #689F38; 
 $background-color: #F1F8E9; 
 $error-color: #E57373; 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;  background-color: $background-color; }
