--- a/RealTimeForum/src/app/components/register/register.component.html
+++ b/RealTimeForum/src/app/components/register/register.component.html
@@ -1,23 +1,16 @@
 <div class="register-container">
     <mat-card>
         <h2 mat-card-title>Register</h2>
-        <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-            <mat-form-field appearance="outline" class="full-width">
-                <mat-label>Email</mat-label>
-                <input matInput type="email" formControlName="email" placeholder="Enter your email" />
-                @if (registerForm.get('email')?.hasError('required')){
-                    <mat-error>Email is required.</mat-error>
-                }
-                @if (registerForm.get('email')?.hasError('email')){
-                    <mat-error>Please enter a valid email.</mat-error>
-                }
-            </mat-form-field>
+        <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">            
 
             <mat-form-field appearance="outline" class="full-width">
                 <mat-label>Username</mat-label>
                 <input matInput type="text" formControlName="username" placeholder="Enter your username" />
                 @if (registerForm.get('username')?.hasError('required')){
                     <mat-error>Username is required.</mat-error>
+                }
+                @if (registerForm.get('username')?.hasError('email')){
+                    <mat-error>Please enter a valid email.</mat-error>
                 }
             </mat-form-field>
 
