format constructor for better readability

--- a/RealTimeForum/src/app/components/comments/comments.component.scss
+++ b/RealTimeForum/src/app/components/comments/comments.component.scss
@@ -28,7 +28,7 @@
   
       .button-container {
         display: flex;
-        justify-content: flex-end; /* מיישר את הכפתור לימין */
+        justify-content: flex-end;
         margin-top: 0.5rem;
   
         button {
