--- a/Front/src/styles.scss
+++ b/Front/src/styles.scss
@@ -1,11 +1,22 @@
-/* You can add global styles to this file, and also import other style files */
-$primary-color: #4CAF50;  
-$primary-dark-color: #388E3C;  
-$primary-light-color: #C8E6C9;  
-$accent-color: #8BC34A;  
-$accent-dark-color: #689F38; 
-$background-color: #F1F8E9; 
-$error-color: #E57373; 
+$primary-color: #4CAF50;
+$primary-dark-color: #388E3C;
+$primary-light-color: #C8E6C9;
+$accent-color: #8BC34A;
+$accent-dark-color: #689F38;
+$background-color: #F1F8E9;
+$error-color: #E57373;
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;  background-color: $background-color; }
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    background-color: $background-color;
+}
+
+* {
+    box-sizing: border-box;
+}
