add 'Remember Me' functionality to login form

--- a/RealTimeForum/src/app/components/login/login.component.html
+++ b/RealTimeForum/src/app/components/login/login.component.html
@@ -24,6 +24,8 @@
                 }
             </mat-form-field> 
 
+            <mat-checkbox formControlName="rememberMe">Remember Me</mat-checkbox>
+
             <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid || isLoading">
                 @if (isLoading){
                 <mat-spinner diameter="20"></mat-spinner>
