postFormComponent extraction fix

--- a/Front/src/app/components/forum/forum.component.html
+++ b/Front/src/app/components/forum/forum.component.html
@@ -9,33 +9,17 @@
     }
   </div>
 
-  <!-- Form to create a new post, shown only when the user clicks the button -->
+  <!-- Form to create a new post-->
   @if (showPostForm){
-  <form [formGroup]="postForm" class="post-form" (ngSubmit)="createPost()">
-    <mat-form-field appearance="outline" class="full-width">
-      <mat-label>Post Title</mat-label>
-      <input matInput formControlName="title" placeholder="Enter post title" />
-      @if (postForm.get('title')?.hasError('required')){
-      <mat-error>Title is required</mat-error>
-      }
-    </mat-form-field>
-
-    <ckeditor [editor]="Editor" [config]="config" formControlName="content"></ckeditor>
-
-    <!-- Button containers -->
-    <div class="button-container">
-      <button mat-raised-button color="primary" type="submit" [disabled]="postForm.invalid">
-        Submit Post
-      </button>
-      <button mat-button color="warn" (click)="togglePostForm()">
-        Cancel
-      </button>
-    </div>
-  </form>
+    <app-post-form 
+      [postForm]="postForm" 
+      (formSubmit)="togglePostForm()" 
+      (cancel)="createPost()">
+    </app-post-form>
   }
 
   <!-- Display list of posts -->
-  @for (post of posts; track post){
+  @for (post of posts; track post) {
     <app-post [post]="post"></app-post>
   }
 </div>
