--- a/Front/src/app/components/post-form/post-form.component.html
+++ b/Front/src/app/components/post-form/post-form.component.html
@@ -1,19 +1,23 @@
-<div class="post">
-    <div class="post-header">
-      <h3>{{ post.title }}</h3>   
-    </div>
-    <div class="post-content" [innerHTML]="post.content"></div>
-
-    <!-- Button to toggle showing comments -->
-    <button mat-button color="primary" (click)="toggleComments()">
-      {{ post.showComments ? 'Hide Comments' : 'Show Comments' }}
-    </button>   
-
-    <!-- Comments section -->
-    @if (post.showComments){
-    <div class="comments-section">
-      <app-comments [postId]="post.id"></app-comments>
-    </div>
+@if (showPostForm){
+    <form [formGroup]="postForm" class="post-form" (ngSubmit)="createPost()">
+        <mat-form-field appearance="outline" class="full-width">
+            <mat-label>Post Title</mat-label>
+            <input matInput formControlName="title" placeholder="Enter post title" />
+            @if (postForm.get('title')?.hasError('required')){
+            <mat-error>Title is required</mat-error>
+            }
+        </mat-form-field>
+    
+        <app-editor [control]="getContent()"></app-editor>
+    
+        <!-- Button containers -->
+        <div class="button-container">
+            <button mat-raised-button color="primary" type="submit" [disabled]="postForm.invalid">
+                Submit Post
+            </button>
+            <button mat-button color="warn" (click)="onCancel()">
+                Cancel
+            </button>
+        </div>
+    </form>
     }
-  </div>
-
