--- a/Front/src/styles.scss
+++ b/Front/src/styles.scss
@@ -20,3 +20,13 @@ body {
 * {
     box-sizing: border-box;
 }
+
+.success-snackbar {
+    background-color: $primary-color; 
+    color: white; 
+  }
+  
+  .error-snackbar {
+    background-color: $error-color; 
+    color: white; 
+  }
