--- a/Front/src/app/components/auth/login/login.component.html
+++ b/Front/src/app/components/auth/login/login.component.html
@@ -3,12 +3,12 @@
         <h2 mat-card-title>Login</h2>
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
             <mat-form-field appearance="outline" class="full-width">
-                <mat-label>Username</mat-label>
-                <input matInput type="text" formControlName="username" placeholder="Enter your username" />
-                @if (loginForm.get('username')?.hasError('required')){
+                <mat-label>Email</mat-label>
+                <input matInput type="text" formControlName="email" placeholder="Enter your email" />
+                @if (loginForm.get('email')?.hasError('required')){
                 <mat-error>Username is required.</mat-error>
                 }
-                @if (loginForm.get('username')?.hasError('email')){
+                @if (loginForm.get('email')?.hasError('email')){
                 <mat-error>Please enter a valid email.</mat-error>
                 }
             </mat-form-field>
