--- a/Front/src/app/components/auth/register/register.component.html
+++ b/Front/src/app/components/auth/register/register.component.html
@@ -4,14 +4,22 @@
         <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">            
 
             <mat-form-field appearance="outline" class="full-width">
+                <mat-label>Email</mat-label>
+                <input matInput type="email" formControlName="email" placeholder="Enter your email" />
+                @if (registerForm.get('email')?.hasError('required')){
+                    <mat-error>Email is required.</mat-error>
+                }
+                @if (registerForm.get('email')?.hasError('email')){
+                    <mat-error>Please enter a valid email.</mat-error>
+                }
+            </mat-form-field>
+
+            <mat-form-field appearance="outline" class="full-width">
                 <mat-label>Username</mat-label>
                 <input matInput type="text" formControlName="username" placeholder="Enter your username" />
                 @if (registerForm.get('username')?.hasError('required')){
                     <mat-error>Username is required.</mat-error>
-                }
-                @if (registerForm.get('username')?.hasError('email')){
-                    <mat-error>Please enter a valid email.</mat-error>
-                }
+                }              
             </mat-form-field>
 
             <mat-form-field appearance="outline" class="full-width">
