--- a/Front/src/app/components/forum/post-form/post-form.component.html
+++ b/Front/src/app/components/forum/post-form/post-form.component.html
@@ -1,23 +1,21 @@
-@if (showPostForm){
-    <form [formGroup]="postForm" class="post-form" (ngSubmit)="createPost()">
-        <mat-form-field appearance="outline" class="full-width">
-            <mat-label>Post Title</mat-label>
-            <input matInput formControlName="title" placeholder="Enter post title" />
-            @if (postForm.get('title')?.hasError('required')){
-            <mat-error>Title is required</mat-error>
-            }
-        </mat-form-field>
-    
-        <app-editor [control]="getContent()"></app-editor>
-    
-        <!-- Button containers -->
-        <div class="button-container">
-            <button mat-raised-button color="primary" type="submit" [disabled]="postForm.invalid">
-                Submit Post
-            </button>
-            <button mat-button color="warn" (click)="onCancel()">
-                Cancel
-            </button>
-        </div>
-    </form>
-    }
+<form [formGroup]="postForm" class="post-form" (ngSubmit)="createPost()">
+    <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Post Title</mat-label>
+        <input matInput formControlName="title" placeholder="Enter post title" />
+        @if (postForm.get('title')?.hasError('required')){
+        <mat-error>Title is required</mat-error>
+        }
+    </mat-form-field>
+
+    <app-editor [control]="getContent()"></app-editor>
+
+    <!-- Button containers -->
+    <div class="button-container">
+        <button mat-raised-button color="primary" type="submit" [disabled]="postForm.invalid">
+            Submit Post
+        </button>
+        <button mat-button color="warn" type="button" (click)="onCancel()">
+            Cancel
+        </button>
+    </div>
+</form>
