--- a/Front/src/app/components/forum/forum.component.html
+++ b/Front/src/app/components/forum/forum.component.html
@@ -19,7 +19,7 @@
   }
 
   <!-- Display list of posts -->
-  @for (post of posts; track post) {
+  @for (post of posts(); track post) {
     <app-post [post]="post"></app-post>
   }
 </div>
